--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
 body, html{
     height: 100%;
     width: 100%;
-    background-color: black;
+    background: #000;
 }
 
 @media (max-width: 400px) {
