--- a/src/style.css
+++ b/src/style.css
@@ -11,9 +11,12 @@ body, html{
     background: #000;
 }
 
-@media (max-width: 400px) {
-    nav #container{
-        width: 90%;
-        
-    }
+nav .myName{
+    font-weight: 800;
+    font-size: 2rem;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-image: url('https://images.unsplash.com/photo-1660059804286-bd31b71ac3ac?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-size: cover;
+    background-position: left;
 }
